# cerdosApp

./: COMMANDS.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  Liquidación Lotes - Ceba El Sendero.xlsx  PROYECTO-COMPLETO.md  QUICK-DEPLOY.md  README.md
backend/: .env  .gitignore  DEPLOYMENT.md  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/app/: config.py  database.py  main.py
backend/app/models/: __init.py  alimento.py  consumo_alimento.py  corral.py  cosecha.py  gasto_directo.py  gasto_mensual.py  lote.py  mortalidad.py
backend/app/routes/: __init.py  alimentos.py  consumo_alimento.py  corrales.py  cosechas.py  gastos_directos.py  gastos_mensuales.py  lotes.py  mortalidad.py  reportes.py
backend/app/services/: calculo_service.py
frontend/: .gitignore  DEPLOYMENT.md  FASE1-COMPLETADA.md  FASE2-COMPLETADA.md  FASE3-COMPLETADA.md  FASE4-COMPLETADA.md  KEEP-ALIVE.md  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/config/: api.config.ts
frontend/src/hooks/: useKeepAlive.ts
frontend/src/pages/: Dashboard.tsx  Reportes.tsx
frontend/src/services/: README.md  alimento.service.ts  api.client.ts  consumo-alimento.service.ts  corral.service.ts  cosecha.service.ts  examples.ts  gasto-directo.service.ts  gastoMensual.service.ts  index.ts  lotes.service.ts  mortalidad.service.ts  reporte.service.ts
frontend/src/types/: alimento.types.ts  consumo.types.ts  corral.types.ts  cosecha.types.ts  gasto-directo.types.ts  gasto-mensual.types.ts  index.ts  lote.types.ts  mortalidad.types.ts  reporte.types.ts
(+28 files in other folders)
